2011-01-14  Murray Cumming  <murrayc@murrayc.com>

	Deprecate some API which wraps deprecated GTK+ API.

	* gtk/src/range.hg: Deprecate get/set_update_policy() with no replacement.
	* gtk/src/treeview.hg: append*(): Use only non-deprecated API in the 
	template implementation.
	* gtk/src/treeviewcolumn.hg: Documentation: Do not suggest use of deprecated 
  API.
	* gtk/src/window.hg: Deprecate get/set_has_frame() and 
  get/set_frame_dimensions() with no replacements.

2011-01-14  Murray Cumming  <murrayc@murrayc.com>

	Regenerated the XML files containing the C API documentation.

	* gdk/src/gdk_docs.xml:
	* gtk/src/gtk_docs.xml: Regenerated with docextract_to_xml.py.

2011-01-14  Murray Cumming  <murrayc@murrayc.com>

	Added to *-extra_objects.defs to improve the generated documentation.

	* gdk/src/gdk_extra_objects.defs:
	* gtk/src/gtk_extra_objects.defs: Add the definitions that were added in 
	git master.

2011-01-14  Murray Cumming  <murrayc@murrayc.com>

	Restore support for the extra _CLASS_GOBJECT() parameter.

	* tools/m4/class_gtkobject.m4: This is still needed for the weird GtkWindow
	declaration in gtk+-2.0, though that is fixed in gtk+-3.0.

2011-01-14 Murray Cumming <murrayc@murrayc.com>

  Use the m4 convert files from atkmm and pangomm instead of repeating them.

  * configure.ac: Discover the path of the pangomm and atkmm m4 files for use
  instead of repeating them here.
  * tools/m4: Remove convert_pango.m4 and convert_atk.m4.

2011-01-14 Murray Cumming <murrayc@murrayc.com>

  Depend on necessary versions of atkmm and pangomm.

  * configure.ac: Depend on the versions of atkmm and pangomm that provide
  conversions in .m4 files, now that glibmm does not provide them implicitly.
  This is only relevant when building from git, however. The older versions
  would be OK when building from a tarball.

2010-01-14 José Alburquerque <jaalburqu@svn.gnome.org>

  _CLASS_GTKOBJECT: Remove __REAL_* additional arguments.
  