@@ -1,5 +1,14 @@
 2011-01-14  Murray Cumming  <murrayc@murrayc.com>
 
+	Use RefPtr::reset() instead of deprecated RefPtr::clear().
+
+	* demos/gtk-demo/example_change_display.cc:
+	* demos/gtk-demo/example_images.cc:
+	* demos/gtk-demo/example_stockbrowser.cc: These were causing build errors 
+	now that we build with deprecated glibmm API disabled.
+
+2011-01-14  Murray Cumming  <murrayc@murrayc.com>
+
 	Deprecate some API which wraps deprecated GTK+ API.
 
 	* gtk/src/range.hg: Deprecate get/set_update_policy() with no replacement.
